# Kernel

./: .gitignore  CMakeLists.txt  README.md  readme.md
scripts/: mkiso.sh  run.bat
src/boot/: boot.s  cpuid.s  main.s  paging.s
src/include/: multiboot2.h
src/kernel/: main.cpp
src/kernel/asm/: asm.h
src/kernel/boot/: MultibootParser.cpp  MultibootParser.h
src/kernel/display/: Display.cpp  Display.h  display.cpp  display.h
src/kernel/interrupt/: IDTManager.cpp  IDTManager.h  idt_handler.h
src/kernel/interrupt/idt/: idt_handler.cpp  idt_handler.h
src/kernel/interrupt/idt/handler/: IDTHandler.cpp  IDTHandler.h
src/kernel/interrupt/idt/manager/: IDTManager.h
src/kernel/interrupt/idt/types/: IDTDescriptor.h  idt_descriptor.h  interrupt_frame.h
src/kernel/interrupt/pic/: PIC.cpp  PIC.h  PICManager.cpp  PICManager.h
src/kernel/interrupt/types/: IDTDescriptor.h  InterruptFrame.h  idt_descriptor.h  interrupt_frame.h
src/kernel/io/: IO.cpp  IO.h  io.cpp  io.h
src/kernel/io/util/: integer_utils.h
src/kernel/memory/: memory.cpp
src/kernel/multiboot/: MultibootParser.cpp  MultibootParser.h
src/kernel/panic/: Panic.cpp  Panic.h
src/kernel/scheduler/: Scheduler.cpp  Scheduler.h  Timer.cpp  Timer.h
src/kernel/scheduler/task/: Task.h  switchTask.s
src/kernel/scheduler/timer/: Timer.cpp  Timer.h
tools/: kernel.lds
tools/boot/grub/: grub.cfg
